Configurado locação, porém a cada locação realizada o sistema está cadastrando um novo: CLIENTE, FUNCIONARIO, FILME... VERIFICAR.

--- a/WPFVendas/Views/Cadastrar/frmCadastrarFilme.xaml
+++ b/WPFVendas/Views/Cadastrar/frmCadastrarFilme.xaml
@@ -20,7 +20,6 @@
         <Label x:Name="lbEstoqueFilme" Content="Estoque:" HorizontalAlignment="Left" Margin="22,173,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.402,0.534" Height="26" Width="64"/>
         <TextBox x:Name="txtTituloFilme" HorizontalAlignment="Left" Height="23" Margin="11,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" Grid.Column="1"/>
         <TextBox x:Name="txtSinopseFilme" HorizontalAlignment="Left" Height="23" Margin="11,52,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" Grid.Column="1"/>
-        <TextBox x:Name="txtDtLançamentoFilme" HorizontalAlignment="Left" Height="23" Margin="11,83,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" Grid.Column="1"/>
         <TextBox x:Name="txtGeneroFilme" HorizontalAlignment="Left" Height="23" Margin="11,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" Grid.Column="1"/>
         <TextBox x:Name="txtNacionalidade" HorizontalAlignment="Left" Height="23" Margin="10,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" Grid.Column="1"/>
         <TextBox x:Name="txtEstoque" HorizontalAlignment="Left" Height="23" Margin="10,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" Grid.Column="1"/>
@@ -28,6 +27,7 @@
         <TextBox x:Name="txtCriadoEm" HorizontalAlignment="Left" Height="23" Margin="10,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="146" TabIndex="3" IsEnabled="False" Grid.Column="1"/>
         <Label Content="Criado Em:" HorizontalAlignment="Left" Margin="22,206,0,0" VerticalAlignment="Top" Height="26" Width="74"/>
         <Button x:Name="btnCadastrarFilme" Content="Cadastrar" HorizontalAlignment="Left" Margin="45,261,0,0" VerticalAlignment="Top" Width="74" Grid.Column="1" Height="20" Click="BtnCadastrarFilme_Click"/>
+        <DatePicker x:Name="DtLançamentoFilme" Grid.Column="1" HorizontalAlignment="Left" Margin="10,82,0,0" VerticalAlignment="Top" Width="147"/>
 
     </Grid>
 </Window>
