--- a/WPFVendas/Views/Locacao/frmLocacao.xaml
+++ b/WPFVendas/Views/Locacao/frmLocacao.xaml
@@ -5,20 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Locadora.Views.Locacao"
         mc:Ignorable="d"
-        Title="Locação" Height="603" Width="607">
-    <Grid>
-        <TextBox x:Name="txtCliente" HorizontalAlignment="Left" Height="22" Margin="280,335,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtDtLocaco" HorizontalAlignment="Left" Height="22" Margin="280,362,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtDtDevolucao" HorizontalAlignment="Left" Height="22" Margin="280,389,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtValor" HorizontalAlignment="Left" Height="23" Margin="280,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtFuncionario" HorizontalAlignment="Left" Height="22" Margin="280,443,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        Title="Locação" Height="718.068" Width="734.666">
+    <Grid Margin="0,10,0,-10">
+        <TextBox x:Name="txtCliente" HorizontalAlignment="Left" Height="22" Margin="225,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230"/>
 
-        <Label x:Name="lbCliente" Content="Cliente" HorizontalAlignment="Left" Margin="177,335,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbDataLocacao" Content="Data locação" HorizontalAlignment="Left" Margin="177,361,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbDataDevolucao" Content="Data devolução" HorizontalAlignment="Left" Margin="177,389,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbValor" Content="Valor R$" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="177,417,0,0"/>
-        <Label x:Name="lbFuncionario" Content="Funcionario" HorizontalAlignment="Left" Margin="177,443,0,0" VerticalAlignment="Top"/>
+
+        <TextBox x:Name="txtValor" HorizontalAlignment="Left" Height="23" Margin="225,296,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="105"/>
+        <TextBox x:Name="txtFuncionario" HorizontalAlignment="Left" Height="22" Margin="225,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230"/>
+
+        <Label x:Name="lbCliente" Content="CPF Cliente" HorizontalAlignment="Left" Margin="122,56,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbDataLocacao" Content="Data locação" HorizontalAlignment="Left" Margin="122,110,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbDataDevolucao" Content="Data devolução" HorizontalAlignment="Left" Margin="122,138,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbValor" Content="Valor unitário R$" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="122,297,0,0"/>
+        <Label x:Name="lbFuncionario" Content="CPF Funcionário" HorizontalAlignment="Left" Margin="122,202,0,0" VerticalAlignment="Top"/>
 
         <Button x:Name="btnLocacao" Content="Efetuar" HorizontalAlignment="Left" Margin="255,491,0,0" VerticalAlignment="Top" Width="75"/>
+        <DataGrid x:Name="dtaFilmesLocar" AutoGenerateColumns="False" Loaded="DtaFilmesLocar_Loaded"  HorizontalAlignment="Left" Height="264" Margin="122,332,0,0" VerticalAlignment="Top" Width="520">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Quantidade}" Header="Quantidade" Width="80"/>
+                <DataGridTextColumn Binding="{Binding ValorUnitario}" Header="R$" Width="50"/>
+                <DataGridTextColumn Binding="{Binding Filme}" Header="Filme" Width="180"/>
+                <DataGridTextColumn Binding="{Binding Genero}" Header="Genero" Width="100"/>
+                <DataGridTextColumn Binding="{Binding Estoque}" Header="Estoque" />
+                <DataGridTextColumn Binding="{Binding Subtotal}" Header="Subtotal" />
+            </DataGrid.Columns>
+        </DataGrid>
+
+
+        <Label x:Name="lbFilme" Content="Filme&#xD;&#xA;" HorizontalAlignment="Left" Margin="122,262,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtFilmeProcurar" HorizontalAlignment="Left" Height="23" Margin="225,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="230"/>
+        <Button x:Name="btnBuscarFilme" Click="BtnBuscarFilme_Click" Content="Buscar" HorizontalAlignment="Left" Margin="471,265,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnAdicionar" Click="BtnAdicionar_Click" IsEnabled="false" Content="Adicionar" HorizontalAlignment="Left" Margin="471,296,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnBuscarCliente" Click="BtnBuscarCliente_Click" Content="Buscar" HorizontalAlignment="Left" Margin="471,56,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnBuscarFuncionario" Click="BtnBuscarFuncionario_Click" Content="Buscar" HorizontalAlignment="Left" Margin="471,202,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.293,0.091"/>
+
+
+        <Button x:Name="btnLocar" Click="BtnLocar_Click" Content="Locar" IsEnabled="False" HorizontalAlignment="Left" Margin="331,639,0,0" VerticalAlignment="Top" Width="75"/>
+        <DatePicker x:Name="dtLocacao" HorizontalAlignment="Left" Margin="225,112,0,0" VerticalAlignment="Top" Width="230"/>
+        <DatePicker x:Name="dtDevolucao" HorizontalAlignment="Left" Margin="225,141,0,0" VerticalAlignment="Top" Width="230"/>
+        <Label x:Name="lbFuncionarioNome" Content="Funcionario:" HorizontalAlignment="Left" Margin="148,229,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbClienteNome" Content="Cliente:" HorizontalAlignment="Left" Margin="167,81,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtFuncionarioNome" IsEnabled="false" HorizontalAlignment="Left" Height="23" Margin="225,231,0,0" TextWrapping="Wrap" Text="Nome do Funcionário" VerticalAlignment="Top" Width="230"/>
+        <TextBox x:Name="txtClienteNome" IsEnabled="false" HorizontalAlignment="Left" Height="23" Margin="225,84,0,0" TextWrapping="Wrap" Text="Nome do Cliente" VerticalAlignment="Top" Width="230"/>
+        <Button x:Name="btnNovoCliente" Click="BtnNovoCliente_Click" Content="Outro Cliente" HorizontalAlignment="Left" Margin="567,56,0,0" VerticalAlignment="Top" Width="105"/>
+        <Button x:Name="btnNovoFuncionario" Click="BtnNovoFuncionario_Click" Content="Outro Funcionario" HorizontalAlignment="Left" Margin="567,202,0,0" VerticalAlignment="Top" Width="105" Height="26"/>
+        <Label x:Name="lbFilme_Copy" Content="Qtd.&#xA;" HorizontalAlignment="Left" Margin="349,292,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtQuantidadeLocar" HorizontalAlignment="Left" Height="23" Margin="387,296,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="68"/>
+        <Label x:Name="lbTextoTotal" Content="Total R$: " HorizontalAlignment="Left" Margin="122,601,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbTotal" Content="" HorizontalAlignment="Left" Margin="182,601,0,0" VerticalAlignment="Top"/>
+
+
+
+
     </Grid>
 </Window>
