--- a/WPFVendas/Views/Locacao/frmDevolucaoLocacao.xaml
+++ b/WPFVendas/Views/Locacao/frmDevolucaoLocacao.xaml
@@ -5,21 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Locadora.Views.Locacao"
         mc:Ignorable="d"
-        Title="frmDevolucaoLocacao"  Height="190.193" Width="333.5">
+        Title="frmDevolucaoLocacao"  Height="310.193" Width="436.834">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="67*"/>
-            <ColumnDefinition Width="96*"/>
+            <ColumnDefinition Width="151*"/>
+            <ColumnDefinition Width="270*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="33*"/>
         </Grid.ColumnDefinitions>
         <Label x:Name="label" Content="ID Locação:" HorizontalAlignment="Left" Margin="17,17,0,0" VerticalAlignment="Top" Height="26" Width="71"/>
         <Label x:Name="label1" Content="Data da devolução:
-" HorizontalAlignment="Left" Margin="17,56,0,0" VerticalAlignment="Top" Height="26" Width="115"/>
-        <Label x:Name="label2" Content="Label" HorizontalAlignment="Left" Margin="86,171,0,-35" VerticalAlignment="Top" Height="0" Width="38"/>
-        <TextBox x:Name="txtIdLocacao" Grid.Column="1" HorizontalAlignment="Left" Height="22" Margin="10,21,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="172"/>
-        <TextBox x:Name="txtDataDevolucaoLocacao" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="10,59,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="172"/>
-        <Label x:Name="label3" Content="Multa:" HorizontalAlignment="Left" Margin="17,96,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbValorMulta" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="10,96,0,0" VerticalAlignment="Top" Width="172"/>
+" HorizontalAlignment="Left" Margin="17,164,0,0" VerticalAlignment="Top" Height="26" Width="115"/>
+        <Label x:Name="label2" Content="Label" HorizontalAlignment="Left" Margin="86,171,0,0" VerticalAlignment="Top" Height="0" Width="38"/>
+        <TextBox x:Name="txtIdLocacao" HorizontalAlignment="Left" Height="22" Margin="1,21,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="172" Grid.Column="1"/>
+        <DatePicker x:Name="txtDataDevolucao" HorizontalAlignment="Left" Margin="1,166,0,0" VerticalAlignment="Top" Width="172" Grid.Column="1" Height="24"/>
+        <Label x:Name="label3" Content="Multa:" HorizontalAlignment="Left" Margin="86,204,0,0" VerticalAlignment="Top" Width="53" Height="26"/>
+        <Label x:Name="lbValorMulta" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="10,204,0,0" VerticalAlignment="Top" Width="172" Height="26"/>
 
-        <Button x:Name="btnDevolucao" Content="Devolver" Grid.Column="1" HorizontalAlignment="Left" Margin="56,129,0,0" VerticalAlignment="Top" Width="76"/>
+        <Button x:Name="btnDevolucao" IsEnabled="False" Click="BtnDevolucao_Click" Content="Devolver" Grid.Column="1" HorizontalAlignment="Left" Margin="33,237,0,0" VerticalAlignment="Top" Width="76" Height="22"/>
+        <Label x:Name="label4" Content="Cliente" HorizontalAlignment="Left" Margin="86,48,0,0" VerticalAlignment="Top" Width="48" Height="26"/>
+        <Label x:Name="label5" Content="CPF" HorizontalAlignment="Left" Margin="94,74,0,0" VerticalAlignment="Top" Height="26" Width="30"/>
+        <Label x:Name="label6" Content="Dt.Locacao" HorizontalAlignment="Left" Margin="65,105,0,0" VerticalAlignment="Top" Width="69" Height="26"/>
+        <TextBox x:Name="txtCliente" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="1,50,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="172" Grid.Column="1"/>
+        <TextBox x:Name="txtCPFCliente" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="1,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="172" Grid.Column="1"/>
+        <TextBox x:Name="txtDtLocacao" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="0,108,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="170" Grid.Column="1"/>
+        
+        <Button x:Name="btnBuscarLocacao" Click="BtnBuscarLocacao_Click" Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="192,21,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="3"/>
+
+
     </Grid>
 </Window>
