--- a/WPFVendas/Views/Locacao/frmLocacao.xaml
+++ b/WPFVendas/Views/Locacao/frmLocacao.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Locadora.Views.Locacao"
         mc:Ignorable="d"
-        Title="Locação" Height="718.068" Width="734.666">
-    <Grid Margin="0,10,0,-10">
+        Title="Locação" Height="773.068" Width="734.666">
+    <Grid Margin="0,10,0,-1">
         <TextBox x:Name="txtCliente" HorizontalAlignment="Left" Height="22" Margin="225,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230"/>
 
 
@@ -20,7 +20,7 @@
         <Label x:Name="lbFuncionario" Content="CPF Funcionário" HorizontalAlignment="Left" Margin="122,202,0,0" VerticalAlignment="Top"/>
 
         <Button x:Name="btnLocacao" Content="Efetuar" HorizontalAlignment="Left" Margin="255,491,0,0" VerticalAlignment="Top" Width="75"/>
-        <DataGrid x:Name="dtaFilmesLocar" AutoGenerateColumns="False" Loaded="DtaFilmesLocar_Loaded"  HorizontalAlignment="Left" Height="264" Margin="122,332,0,0" VerticalAlignment="Top" Width="520">
+        <DataGrid x:Name="dtaFilmesLocar" AutoGenerateColumns="False" Loaded="DtaFilmesLocar_Loaded"  HorizontalAlignment="Left" Height="264" Margin="122,379,0,0" VerticalAlignment="Top" Width="520">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Quantidade}" Header="Quantidade" Width="80"/>
                 <DataGridTextColumn Binding="{Binding ValorUnitario}" Header="R$" Width="50"/>
@@ -40,7 +40,7 @@
         <Button x:Name="btnBuscarFuncionario" Click="BtnBuscarFuncionario_Click" Content="Buscar" HorizontalAlignment="Left" Margin="471,202,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.293,0.091"/>
 
 
-        <Button x:Name="btnLocar" Click="BtnLocar_Click" Content="Locar" IsEnabled="False" HorizontalAlignment="Left" Margin="331,639,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnLocar" Click="BtnLocar_Click" Content="Locar" IsEnabled="False" HorizontalAlignment="Left" Margin="331,686,0,0" VerticalAlignment="Top" Width="75"/>
         <DatePicker x:Name="dtLocacao" HorizontalAlignment="Left" Margin="225,112,0,0" VerticalAlignment="Top" Width="230"/>
         <DatePicker x:Name="dtDevolucao" HorizontalAlignment="Left" Margin="225,141,0,0" VerticalAlignment="Top" Width="230"/>
         <Label x:Name="lbFuncionarioNome" Content="Funcionario:" HorizontalAlignment="Left" Margin="148,229,0,0" VerticalAlignment="Top"/>
@@ -51,9 +51,10 @@
         <Button x:Name="btnNovoFuncionario" Click="BtnNovoFuncionario_Click" Content="Outro Funcionario" HorizontalAlignment="Left" Margin="567,202,0,0" VerticalAlignment="Top" Width="105" Height="26"/>
         <Label x:Name="lbFilme_Copy" Content="Qtd.&#xA;" HorizontalAlignment="Left" Margin="349,292,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtQuantidadeLocar" HorizontalAlignment="Left" Height="23" Margin="387,296,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="68"/>
-        <Label x:Name="lbTextoTotal" Content="Total R$: " HorizontalAlignment="Left" Margin="122,601,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbTotal" Content="" HorizontalAlignment="Left" Margin="182,601,0,0" VerticalAlignment="Top"/>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Height="100" Margin="292,450,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label x:Name="lbTextoTotal" Content="Total R$: " HorizontalAlignment="Left" Margin="122,648,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbTotal" Content="" HorizontalAlignment="Left" Margin="182,648,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label" Content="Filme Selecionado:" HorizontalAlignment="Left" Margin="225,336,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbFilmeSelecionado" Content="" HorizontalAlignment="Left" Margin="349,334,0,0" VerticalAlignment="Top"/>
 
 
 
