--- a/WPFVendas/Views/Relatorios/frmHistoricoLocacaoXFuncionario.xaml
+++ b/WPFVendas/Views/Relatorios/frmHistoricoLocacaoXFuncionario.xaml
@@ -5,9 +5,31 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Locadora.Views.Relatorios"
         mc:Ignorable="d"
-        Title="frmHistoricoLocacaoXFuncionario" Height="450" Width="800">
-    <Grid>
-        <Label x:Name="lbHistoricoLocacaoXFuncionario" Content="Label" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="93,26,0,0"/>
+        Title="frmHistoricoLocacaoXFuncionario" Height="704.969" Width="800">
+    <Grid Margin="0,0,0,17">
+        <GroupBox x:Name="groupBox" Header="Locações x Funcionario" HorizontalAlignment="Left" Height="340" Margin="56,144,0,0" VerticalAlignment="Top" Width="698">
+            <DataGrid x:Name="dtLocacaoXFuncionario" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="235" Margin="32,55,0,0" VerticalAlignment="Top" Width="621" RenderTransformOrigin="-0.136,0.275">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding Locacao_ID}" Header="ID Locação"/>
+                    <DataGridTextColumn Binding="{Binding Cliente}" Header="Cliente"/>
+                    <DataGridTextColumn Binding="{Binding Status}" Header="Status"/>
+                    <DataGridTextColumn Binding="{Binding DataLocacao}" Header="Data_Locacao"/>
+                    <DataGridTextColumn Binding="{Binding DataDevolucao}" Header="Data_Devolução"/>
+                    <DataGridTextColumn Binding="{Binding Comissao}" Header="Comissao"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </GroupBox>
+
+        <Label x:Name="label" Content="CPF Funcionario: " HorizontalAlignment="Left" Margin="80,58,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtFuncionarioBuscar" HorizontalAlignment="Left" Height="23" Margin="182,62,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btnBuscarFuncionario" Click="BtnBuscarFuncionario_Click_1" Content="Buscar" HorizontalAlignment="Left" Margin="367,64,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label x:Name="lbFuncionarioEncontrado" Content="" HorizontalAlignment="Left" Margin="182,93,0,0" VerticalAlignment="Top"/>
+
+        <Label x:Name="lb1" HorizontalAlignment="Left" Height="23" Margin="242,504,0,0" Content="R$ Comissão Liberado" VerticalAlignment="Top" Width="134" RenderTransformOrigin="0.342,0.587"/>
+        <Label x:Name="lb2" HorizontalAlignment="Left" Margin="462,504,0,0" Content="R$ Comissão Bloqueado" VerticalAlignment="Top"/>
+        <Label x:Name="lbTotalComissaoRecebido" HorizontalAlignment="Left" Height="23" Margin="242,536,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lbTotalComissaoReceber" HorizontalAlignment="Left" Margin="462,535,0,0" VerticalAlignment="Top" Height="22" Width="138"/>
 
     </Grid>
+
 </Window>
